--- a/continue.html
+++ b/continue.html
@@ -8,11 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/style/styles.css">
     <link rel="stylesheet" href="./assets/style/media.css">
+    <link rel="stylesheet" href="./assets/style/main.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Batalha de comida GOURMET</h1>
+    <header class="header-pattern">
+        <h1>Batalha de comida <span style="font-family:'Jua'">GOURMET</span></h1>
     </header>
     <div id="menu-continue">
         <button><a href="#">Café da Manhã</a></button> <img src="" alt="">
