--- a/game.html
+++ b/game.html
@@ -8,29 +8,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/style/styles.css">
     <link rel="stylesheet" href="./assets/style/media.css">
+    <link rel="stylesheet" href="./assets/style/main.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header-pattern">
+        <h1>Batalha de comida <span style="font-family:'Jua'">GOURMET</span></h1>
         <button id="btn"><a href="index.html">Voltar</a></button>
     </header>
     <section id="round-of-16">
-        <a href="#"><img src="#" alt="foto1"></a>
-        <a href="#"><img src="#" alt="foto2"></a>
-        <a href="#"><img src="#" alt="foto3"></a>
-        <a href="#"><img src="#" alt="foto4"></a>
-        <a href="#"><img src="#" alt="foto5"></a>
-        <a href="#"><img src="#" alt="foto6"></a>
-        <a href="#"><img src="#" alt="foto7"></a>
-        <a href="#"><img src="#" alt="foto8"></a>
-        <a href="#"><img src="#" alt="foto9"></a>
-        <a href="#"><img src="#" alt="foto10"></a>
-        <a href="#"><img src="#" alt="foto11"></a>
-        <a href="#"><img src="#" alt="foto12"></a>
-        <a href="#"><img src="#" alt="foto13"></a>
-        <a href="#"><img src="#" alt="foto14"></a>
-        <a href="#"><img src="#" alt="foto15"></a>
-        <a href="#"><img src="#" alt="foto16"></a>
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto1"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto2"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+        
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto3"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto4"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto5"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto6"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto7"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto8"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
+        <div class="doubles">
+            <div class="plate"> 
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto9"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto10"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto11"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto12"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto13"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto14"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
+        <div class="doubles">
+            <div class="plate">
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto15"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+            <div class="plate"> 
+                <a href="#"><img src="assets\images\base\prato vazio.png" alt="foto16"></a>
+                <p class="plate-name">nome do prato</p>
+            </div>
+        </div>
+
     </section>
     <section id="quarter-finals">
         <a href="#"><img src="#" alt="foto1" value="1"></a>
