--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,23 +9,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/style/styles.css">
     <link rel="stylesheet" href="./assets/style/media.css">
+    <link rel="stylesheet" href="./assets/style/main.css">
     <script src="main.js"></script>
 </head>
+
 <body>
-    <header>
-        <h1>Batalha de comida gourmet meoo</h1>
+    <header class="header-pattern">
+        <h1>Batalha de comida
+            <span style="font-family:'Jua'">GOURMET</span>
+        </h1>
+        <div>
+            <button class="btnNav">
+                <a href="#">REPROGRAMA</a>
+            </button>
+            <button class="btnNav">
+                <a href="#">CONTATOS</a>
+            </button>
+        </div>
     </header>
     <section>
-        <h2>Categorias</h2>
-        <div class="categories">
-            <button id="btn"><a href="#">Café da manhã</a></button>
-            <button id="btn"><a href="#">PF</a></button>
-            <button id="btn"><a href="#">Sobremesa</a></button>
-            <button id="btn"><a href="#">Bebidas</a></button>
-        </div>
+        <div class="intro">
+            <div>
+                <img class="logo" src="./assets/images/logo.png" alt="batalha de comidas gourmet">
+            </div>
+            <div class="categories">
+                <div>
+                    <button class="btnIndex">
+                        <a href="#">Café da manhã</a>
+                    </button>
+                    <div>
+                        <img src="./assets/images/bg_red.png" alt="bg">
+                    </div>
+                </div>
+                <div>
+                    <button class="btnIndex">
+                        <a href="#">PF</a>
+                    </button>
+                    <div>
+                        <img src="./assets/images/bg_red.png" alt="bg">
+                    </div>
+                </div>
+                <div>
+                    <button class="btnIndex">
+                        <a href="#">Sobremesa</a>
+                    </button>
+                    <div>
+                        <img src="./assets/images/bg_red.png" alt="bg">
+                    </div>
+                </div>
+                <div>
+                    <button class="btnIndex">
+                        <a href="#">Bebidas</a>
+                    </button>
+                    <div>
+                        <img src="./assets/images/bg_red.png" alt="bg">
+                    </div>
+                </div>
+            </div>
     </section>
     <footer>
-        <p>Produzido por Jéssica Arrais, Mariana Cunha e Rafaela Volkmann</p>
+        <p>Made with ❤ by Jéssica Arrais, Mariana Cunha, Rafaella Volkmann and {reprograma}, 2018</p>
     </footer>
 </body>
+
 </html>
