--- a/winner.html
+++ b/winner.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/style/styles.css">
     <link rel="stylesheet" href="./assets/style/media.css">
+    <link rel="stylesheet" href="./assets/style/main.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header-pattern">
+        <h1>Batalha de comida <span style="font-family:'Jua'">GOURMET</span></h1>
         <button id="btn"><a href="#">Repetir</a></button>
         <button id="btn"><a href="#">Menu</a></button>
     </header>
